# cell-tower-location

./: .gitignore  Cargo.toml  README.md  openapi.yaml  openapi_codegen.sh  ruby.rb  swagger.yaml  swagger_codegen.sh
.devcontainer/: devcontainer.json
.openapi-generator/: FILES
api/: openapi.yaml
docs/: CoordinatesApi.md  Wgs84Decoded.md
examples/server/: server.rs
source/: Cargo.toml  README.md
source/.openapi-generator/: FILES
source/client/docs/: Wgs84Encoded.md
source/client/src/apis/: coordinates_api.rs
source/client/src/models/: mod.rs
source/docs/: Wgs84Encoded.md  coordinates_api.md
source/examples/server/: server.rs
source/lib/: Cargo.toml
source/lib/src/: main.rs
source/lib/src/lib/: converter_wgs84.rs  wgs84.rs
source/server/: Cargo.toml  README.md
source/server/api/: swagger.yaml
source/server/examples/: client.rs
source/server/src/server/: mod.rs
source/src/client/: mod.rs
source/swagger/: Cargo.toml  README.md
source/swagger/examples/: server.rs
source/swagger/examples/server_lib/: server.rs
source/swagger/src/: lib.rs  models.rs
source/swagger/src/client/: mod.rs
src/: lib.rs  main.rs  models.rs
src/apis/: client.rs  configuration.rs  coordinates_api.rs  mod.rs
src/models/: wgs84_decoded.rs  wgs84_encoded.rs
src/server/: mod.rs
