[package]
name = "swagger_client"
version = "0.2.0"
authors = ["Your Name <your.email@example.com>"]
description = "This is a cell tower geolocation converter on the OpenAPI 3.0 specification."
license = "Unlicense"

[features]
default = ["client", "server"]
client = ["serde_json",  "serde_ignored", "hyper", "hyper-tls", "native-tls", "openssl", "url", "uuid", "tokio"]
server = ["serde_json", "serde_ignored", "hyper", "hyper-tls", "native-tls", "openssl", "regex", "percent-encoding", "url", "uuid", "tokio"]

[dependencies]
# Required by example server.
#
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
hyper = {version = "0.14", optional = true}
hyper-tls = {version = "0.5", optional = true}
swagger = "6.3"

# Not required by example server.
#
lazy_static = "1.4"
log = "0.4.14"
mime = "0.3.16"
multipart = {version = "0.13.3", optional = true}
native-tls = {version = "0.2", optional = true}
openssl = {version = "0.10", optional = true}
percent-encoding = {version = "2.1", optional = true}
regex = {version = "1.4", optional = true}
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_ignored = {version = "0.1.9", optional = true}
serde_json = {version = "1.0", optional = true}
serde_urlencoded = {version = "0.6", optional = true}
tokio = { version = "1", features = ["full"], optional = true }
url = {version = "2.2", optional = true}
uuid = {version = "0.8", optional = true, features = ["v4", "serde"] }

# ToDo: this should be updated to point at the official crate once
# https://github.com/RReverser/serde-xml-rs/pull/45 is accepted upstream

[dev-dependencies]
clap = "3.0"
error-chain = "0.12"
